--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
     "import/no-unresolved": 0,
     "no-unused-expressions": 0,
     "no-continue": 0,
-    "consistent-return": 0
+    "consistent-return": 0,
+    "react/function-component-definition": 0
   }
 }
