--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "no-unused-expressions": 0,
     "no-continue": 0,
     "consistent-return": 0,
-    "react/function-component-definition": 0
+    "react/function-component-definition": 0,
+    "default-case": 0
   }
 }
