--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
     "no-continue": 0,
     "consistent-return": 0,
     "react/function-component-definition": 0,
-    "default-case": 0
+    "default-case": 0,
+    "import/no-cycle": 0
   }
 }
