chore(eslint): add rules to eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "consistent-return": 0,
     "react/function-component-definition": 0,
     "default-case": 0,
-    "import/no-cycle": 0
+    "import/no-cycle": 0,
+    "react/jsx-no-useless-fragment": 0
   }
 }
